fixed about card
about cards for the age was not showing up correctly on smaller mobiles

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -252,7 +252,7 @@ a.smooth-scroll {
 .about-cards{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .left-about {
